Bug 193163 - Digikam ignores settings on the rating stars
Summary: Digikam ignores settings on the rating stars
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Filters (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-18 23:15 UTC by Michael
Modified: 2012-06-27 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2009-05-18 23:15:37 UTC
Version:            (using KDE 4.2.2)
OS:                Linux
Installed from:    Ubuntu Packages

Hi, 

I have SVN 969703.
Digikam ignores the settings "less then or equal" and "equal" on the stars, it always displays greater or equal...

greets mike
Comment 1 Médéric Boquien 2009-05-19 01:12:42 UTC
SVN commit 969802 by mboquien:

Filtering did not work for anything other than "Greater than or equals" because a method had "ratingCond   = ratingCondition;" where one was the object member and the other one was the method 
parameter. Apparently the object member took precedence over the paremeter so only the default setting worked.

BUG:193163


 M  +2 -2      imagefiltersettings.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969802