Filtering did not work for anything other than "Greater than or equals" because a method had "ratingCond   = ratingCondition;" where one was the object member and the other one was the method parameter. Apparently the object member took precedence over the paremeter so only the default setting worked.

BUG:193163

svn path=/trunk/extragear/graphics/digikam/; revision=969802